# heedgitv-4loran

./: .gitignore  README.md  cli.py  environment.yml  gui.py  manual_poetry.sh  pyproject.toml  requirements.txt  requirements_to_toml.py  setup.py
diarization_helper/: __init__.py  angel_hair_pasta.py  donut.py  elbow.py  fake_progressbar.py  gladia_helper.py  mix_gladia_pyannote.py  nlp_helper.py  pyannote_helper.py
