[tool.poetry]
name = "diarization-helper"
version = "0.1.0"
description = "This Diarization Helper provides a set of utility functions to determine who said when in a video or audio file."
authors = ["Warith Harchaoui <warith.harchaoui@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
nltk = "^3.9.1"
rake-nltk = "^1.0.6"
keybert = "^0.8.5"
langdetect = "^1.0.9"
spacy = "^3.8.2"
matplotlib = "^3.9.2"
streamlit = "^1.39.0"
os-helper = {git = "https://github.com/warith-harchaoui/os-helper.git", rev = "main"}
sftp-helper = {git = "https://github.com/warith-harchaoui/sftp-helper.git", rev = "main"}
audio-helper = {git = "https://github.com/warith-harchaoui/audio-helper.git", rev = "main"}
video-helper = {git = "https://github.com/warith-harchaoui/video-helper.git", rev = "main"}
yt-helper = {git = "https://github.com/warith-harchaoui/yt-helper.git", rev = "main"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
